--- a/Shop.UI/Pages/Index.cshtml
+++ b/Shop.UI/Pages/Index.cshtml
@@ -15,3 +15,14 @@
         <input type="submit" value="Save product" />
     </form>
 </div>
+
+<div>
+    @{
+       foreach (var p in Model.Products)
+       {
+           <p>
+               @p.Name - @p.Description - @p.Price
+           </p>
+       }
+    }
+</div>
