--- a/Shop.UI/Pages/Shared/_Layout.cshtml
+++ b/Shop.UI/Pages/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <li><a asp-page="/Admin/Index">Admin</a></li>
                     </ul>
                 </div>
             </div>
