--- a/Shop.UI/Pages/Admin/Index.cshtml
+++ b/Shop.UI/Pages/Admin/Index.cshtml
@@ -4,17 +4,39 @@
 }
 
 <div id="app">
-    <input type="number" @@change ="alert('Hello')" v-model="price"/>
+
+    <input type="number" @@change="alert('Hello')" v-model="price" />
     <button v-on:click="togglePrice">Toggle</button>
+    <button v-on:click="getProducts">Get products</button>
+
     <p v-show="showPrice">
         {{price}}
     </p>
     <p v-if="showPrice">
         {{formatPrice}}
     </p>
+
+
+    <div>
+        <p v-for="product in products">
+            {{product}}
+        </p>
+    </div>
+
+    <div>
+        <input v-model="productModel.name" />
+        <input v-model="productModel.description" />
+        <input type="number" v-model="productModel.price" />
+
+        <button @@click="createProduct">Create proudct</button>
+
+    </div>
+
 </div>
 
 @section scripts{ 
+    
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="~/js/Admin/main.js"></script>
 }
