--- a/Shop.UI/Pages/Admin/Index.cshtml
+++ b/Shop.UI/Pages/Admin/Index.cshtml
@@ -5,37 +5,31 @@
 
 <div id="app">
 
-    <input type="number" @@change="alert('Hello')" v-model="price" />
-    <button v-on:click="togglePrice">Toggle</button>
-    <button v-on:click="getProducts">Get products</button>
-
-    <p v-show="showPrice">
-        {{price}}
-    </p>
-    <p v-if="showPrice">
-        {{formatPrice}}
-    </p>
-
-
+    <button v-on:click="togglePrice">Show price</button>
+    
     <div>
-        <p v-for="product in products">
-            {{product}}
+        <p v-for="(product, index) in products">
+            {{product.id}} - {{product.name}}
+            <span v-if="showPrice">{{product.price}}</span>
+            <span v-show="!showPrice">${{product.price}}</span>
+            <a @@click="editProduct(product.id, index)">Edit</a>
+            <a @@click="deleteProduct(product.id, index)">Delete</a>
         </p>
     </div>
 
     <div>
         <input v-model="productModel.name" />
         <input v-model="productModel.description" />
-        <input type="number" v-model="productModel.price" />
+        <input type="number" v-model.number="productModel.price"/>
 
-        <button @@click="createProduct">Create proudct</button>
+        <button @@click="createProduct" v-if="!productModel.id">Create proudct</button>
+        <button @@click="updateProduct" v-else>Update proudct</button>
 
     </div>
 
 </div>
 
 @section scripts{ 
-    
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="~/js/Admin/main.js"></script>
