--- a/Shop.UI/Pages/Admin/Index.cshtml
+++ b/Shop.UI/Pages/Admin/Index.cshtml
@@ -12,7 +12,7 @@
                 <tr>
                     <th>Id</th>
                     <th>Name</th>
-                    <th>Description</th>
+                    <th>Price</th>
                     <th></th>
                     <th></th>
                 </tr>
@@ -59,7 +59,5 @@
 </div>
 
 @section scripts{ 
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="~/js/admin/products.js"></script>
 }
