--- a/Shop.UI/Pages/Admin/_AdminLayout.cshtml
+++ b/Shop.UI/Pages/Admin/_AdminLayout.cshtml
@@ -7,17 +7,15 @@
     
     <environment include="Development">
         <link href="~/lib/bulma-0.9.0/css/bulma.css" rel="stylesheet" />
-        <link rel="stylesheet" href="~/css/site.css" />
     </environment>
 
     <environment include="Production">
         <link href="~/lib/bulma-0.9.0/css/bulma.min.css" rel="stylesheet" />
-        <link rel="stylesheet" href="~/css/site.min.css" />
     </environment>
 </head>
 <body>
     <header>
-        <h3 class="has-text-centered">Admin Panel</h3>
+        <h3 class="title has-text-centered">Admin Panel</h3>
     </header>
 
     <div>
@@ -44,8 +42,9 @@
         </div>
     </div>
 
-    <script src="~/js/site.js" asp-append-version="true"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
