--- a/Shop.UI/Pages/Admin/Stock.cshtml
+++ b/Shop.UI/Pages/Admin/Stock.cshtml
@@ -23,7 +23,7 @@
                 <tbody>
                     <tr v-for="(stock, index) in selectedProduct.stock">
                         <td><input class="input" v-model="stock.description" /></td>
-                        <td><input class="input" v-model="stock.quantity" /></td>
+                        <td><input class="input" v-model.number="stock.quantity" /></td>
                         <td><a class="button is-danger" @@click="deleteStock(stock.id, index)">Delete</a></td>
                     </tr>
                 </tbody>
