--- a/Shop.UI/Pages/Index.cshtml
+++ b/Shop.UI/Pages/Index.cshtml
@@ -5,24 +5,12 @@
 }
 
 <div>
-    <form method="post">
-        <label>Name</label>
-        <input asp-for="Product.Name" />
-        <label>Description</label>
-        <input asp-for="Product.Description" />
-        <label>Price</label>
-        <input asp-for="Product.Price" />
-        <input type="submit" value="Save product" />
-    </form>
-</div>
-
-<div>
     @{
        foreach (var p in Model.Products)
        {
-           <p>
+           <a asp-page="Product" asp-route-name="@p.Name.Replace(" ","-")">
                @p.Name - @p.Description - @p.Price
-           </p>
+           </a>
        }
     }
 </div>
