--- a/Shop.UI/Pages/Product.cshtml
+++ b/Shop.UI/Pages/Product.cshtml
@@ -9,12 +9,15 @@
     <p>@Model.Product.Price</p>
 
     <div>
-        <label>Stock</label>
-        <select>
-            @foreach (var item in Model.Product.Stock)
-            {
-                <option value="@item.Id">item.Description</option>
-            }
-        </select>
+        <form method="post">
+            <label>Stock</label>
+            <select asp-for="ProductTest.Id">
+                @foreach (var item in Model.Product.Stock)
+                {
+                    <option value="@item.Id">item.Description</option>
+                }
+            </select>
+            <button type="submit">Submit</button>
+        </form>
     </div>
 </div>
