Cart implementation part 2
List of CartProduct was implemented

--- a/Shop.UI/Pages/Cart.cshtml
+++ b/Shop.UI/Pages/Cart.cshtml
@@ -4,8 +4,12 @@
 }
 
 <div>
-    <p>@Model.Cart.Name</p>
-    <p>@Model.Cart.Price</p>
-    <p>@Model.Cart.Quantity</p>
-    <p>@Model.Cart.StockId</p>
+    @foreach (var product in Model.Cart)
+    {
+        <p>@product.Name</p>
+        <p>@product.Price</p>
+        <p>@product.Quantity</p>
+        <p>@product.StockId</p>
+    }
+
 </div>
