--- a/Shop.UI/Pages/Index.cshtml
+++ b/Shop.UI/Pages/Index.cshtml
@@ -6,11 +6,13 @@
 
 <div>
     @{
-       foreach (var p in Model.Products)
-       {
-           <a asp-page="Product" asp-route-name="@p.Name.Replace(" ","-")">
-               @p.Name - @p.Description - @p.Price
-           </a>
-       }
+        foreach (var p in Model.Products)
+        {
+            <a asp-page="Product" asp-route-name="@p.Name.Replace(" ","-")">
+                @p.Name - @p.Description - @p.Price
+            </a>
+        }
     }
 </div>
+
+@await Component.InvokeAsync("Cart")
