--- a/Shop.UI/Pages/Product.cshtml
+++ b/Shop.UI/Pages/Product.cshtml
@@ -18,8 +18,10 @@
                 }
             </select>
             <label>Quantity</label>
-            <input asp-for="CartViewModel.Quantity"/>
+            <input asp-for="CartViewModel.Quantity" />
             <button type="submit">Submit</button>
         </form>
     </div>
 </div>
+
+@await Component.InvokeAsync("Cart")
