Basic stripe payment implementation
Stripe was used to make the checkout process.

--- a/Shop.UI/Pages/Admin/Index.cshtml
+++ b/Shop.UI/Pages/Admin/Index.cshtml
@@ -3,6 +3,10 @@
 @{
 }
 
+@using Microsoft.AspNetCore.Http.Extensions;
+
+<label>@UriHelper.GetDisplayUrl(Request)</label>
+
 <div id="app" class="container">
     <div v-if="!editing">
         <button class="button" @@click="newProduct">Add New product</button>
