--- a/Shop.UI/Pages/Checkout/Payment.cshtml
+++ b/Shop.UI/Pages/Checkout/Payment.cshtml
@@ -2,3 +2,48 @@
 @model Shop.UI.Pages.Checkout.PaymentModel
 @{
 }
+@using Microsoft.AspNetCore.Http.Extensions;
+
+<label>@UriHelper.GetDisplayUrl(Request)</label>
+
+<div>Payment</div>
+
+<div>
+    <script src="https://js.stripe.com/v3/"></script>
+    <button id="checkout-button">Pay</button>
+    <label>@Microsoft.AspNetCore.Http.Extensions.UriHelper.GetDisplayUrl(Request)</label>
+</div>
+
+@section scripts{
+    
+    <script>
+    // Create an instance of the Stripe object with your publishable API key
+        const stripe = Stripe('pk_test_51HPzZJITdfAee05WykzEUxYIiakg0yNssTDJy2QXIgboJtqU7KHpxiXKJdXeEnECTkNpTaXMCYHAzbVZaPPi4E9200myXvkTOi');
+      var checkoutButton = document.getElementById('checkout-button');
+
+      checkoutButton.addEventListener('click', function() {
+        // Create a new Checkout Session using the server-side endpoint you
+        // created in step 3.
+        fetch('/create-checkout-session', {
+          method: 'POST',
+        })
+        .then(function(response) {
+          return response.json();
+        })
+        .then(function(session) {
+          return stripe.redirectToCheckout({ sessionId: session.id });
+        })
+        .then(function(result) {
+          // If `redirectToCheckout` fails due to a browser or network
+          // error, you should display the localized error message to your
+          // customer using `error.message`.
+          if (result.error) {
+            alert(result.error.message);
+          }
+        })
+        .catch(function(error) {
+          console.error('Error:', error);
+        });
+      });
+    </script>
+}
